<?xml version="1.0"?>
<package format="2">
  <name>kill_switch</name>
  <version>0.0.0</version>
  <description>Kill switch for poly orbite rover</description>

  <maintainer email="sebastien.dasys@polymtl.ca">seb</maintainer>

  <license>MIT</license>


  <url type="website">https://github.com/PolyOrbite-Rover/polyorbite_rover</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export></export>
</package>
